# it_school

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/src/sapp/: main_application.py  settings.py
backend/src/sapp/connectors/: abstract_connector.py  mongo_connector.py
backend/src/sapp/containers/: application_container.py
backend/src/sapp/controllers/: __init__.py  education_controller.py  education_subject_controller.py  process_controller.py  quiz_controller.py  school_class_controller.py  student_controller.py  teacher_controller.py  users_controller.py
backend/src/sapp/core/: application.py  container.py  exceptions.py  listener_mixins.py
backend/src/sapp/models/: __init__.py  education.py  process.py  school_class.py  student.py  teacher.py  users.py
backend/src/sapp/repositories/: __init__.py  base_mongo_repository.py  education_repository.py  group_repository.py  process_repository.py  quiz_repository.py  school_class_repository.py  student_repository.py  subject_repository.py  teacher_repository.py  user_repository.py
backend/src/sapp/serializers/: __init__.py  education.py  process.py  school_class.py  student.py  teacher.py  users.py
