[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DFilyushin <dmitriy.filyushin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
injector = "^0.18.4"
motor = "^2.5.1"
uvicorn = "^0.15.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
